# meturay

./: .gitattributes  .gitignore  GRSI_README  LICENSE  README.md  run_fig11.ps1
CMake/: CMakeLists.txt  CMakePresets.json  CompilerOptions.cmake  FindOPTIX.cmake  NVCCCompilePTX.cmake
CMake/AssimpSurfaceLoaders/: CMakeLists.txt
CMake/Ext/: CMakeLists-DearImGUI.cmake  CMakeLists-ImGUITexInspect.cmake  CMakeLists.txt  DownloadDearImGUI.cmake  DownloadGLBinding.cmake  DownloadGLBindings.cmake  DownloadImGUITexInspect.cmake  DownloadOpenImageIO.cmake  ExtDownloadDeps.cmake  imguiConfig.cmake.in
CMake/Ext/oiio/: CMakeLists.txt
CMake/GFGSurfaceLoader/: CMakeLists.txt
CMake/ImageIO/: CMakeLists.txt
CMake/Lib/: CMakeLists.txt
CMake/MRay/: CMakeLists.txt
CMake/MTracer/: CMakeLists.txt
CMake/MVisor/: CMakeLists.txt
CMake/RayLib/: CMakeLists.txt
CMake/Test_Misc/: CMakeLists.txt
CMake/Test_TracerCUDA/: CMakeLists.txt
CMake/TracerCUDA/: CMakeLists.txt
CMake/VisorGL/: CMakeLists.txt
Docs/: Makefile  make.bat
Docs/source/: conf.py  index.rst
Lib/Linux/: libGLEW.so.2.1.0
Python/: gauss-noise.py  mray_mse_generate_time.py  mray_mse_generate_time_sdr.py  mray_sdr_gen.py  mse_hdr.py
Source/AssimpSurfaceLoaders/: AssimpForward.h  AssimpSurfaceLoaderPool.cpp  AssimpSurfaceLoaderPool.h  EntryPoint.cpp  EntryPoint.h  MetaSurfaceLoader.cpp  MetaSurfaceLoader.h  ObjSurfaceLoader.cpp  ObjSurfaceLoader.h
Source/GFGSurfaceLoader/: EntryPoint.cpp  EntryPoint.h  GFGSurfaceLoader.cpp  GFGSurfaceLoader.h  GFGSurfaceLoaderPool.cpp  GFGSurfaceLoaderPool.h
Source/ImageIO/: EntryPoint.cpp  EntryPoint.h  FreeImgRAII.h  ImageIO.cpp  ImageIO.h  ImageIOI.h
Source/MRay/: main.cpp
Source/MRenderer/: main.cpp
Source/MTracer/: main.cpp
Source/MVisor/: main.cpp
Source/Materials/: BasicMaterials.cuh  BasicMaterialsKC.cuh  MaterialDataStructs.h  SampleMaterialPool.cu  SampleMaterialPool.h  SampleMaterials.cu  SampleMaterials.cuh  SampleMaterialsKC.cuh
Source/RayLib/: AABB.cu  AABB.h  AABB.hpp  AcceleratorDeviceFunctions.h  AcceleratorGPU.h  AnalyticData.h  AnalyticNodeI.h  AnimateI.h  ArrayPortion.h  BVH.h  BVHAcceleratorGPU.cuh  BVHAcceleratorKernels.cuh  BVHDevice.cuh  BasicSurfaceLoaders.cpp  BasicSurfaceLoaders.h  BitManipulation.cpp  BitManipulation.h  BitonicSort.cuh  CPUTimer.h  Camera.h  CameraKernels.cuh  ColorConversion.h  CommandCallbacksI.h  ComparisonFunctions.cuh  CompileTimeString.h  ConfigParsers.cpp  ConfigParsers.h  Constans.h  Constants.h  CoordinateConversion.h  CoreStructs.h  CosineDistribution.h  CudaCheck.h  CudaConstants.cpp  CudaConstants.h  DLLError.h  Debug.cpp  Debug.h  DeviceMemory.cpp  DeviceMemory.h  (+159 more)
Source/Shaders/: AccumInput.comp  AvgDivisor.comp  DTreeRender.frag  DTreeRender.vert  LumReduction.comp  PGReferenceRender.comp  TextureMaxReduction.comp  TonemapAndGamma.comp
Source/Test_Misc/: SimpleTracerSetup.h  T_AOTracers.cpp  T_GPUScene.cpp  T_MatrixCPU.cpp  T_MatrixGPU.cu  T_MockTracer.cu  T_OptiX.cpp  T_PPGTracers.cpp  T_PathTracers.cpp  T_RayCPU.cpp  T_SceneIO.cpp  T_SceneIOCommon.cpp  T_SimpleTracers.cpp  T_VectorCPU.cpp  T_VectorGPU.cu
Source/Test_TracerCUDA/: T_2DSketch.cu  T_AnisoSVO.cu  T_BlockPWCDistribution.cu  T_BlockPWLDistribution.cu  T_BlockSegmentedReduce.cu  T_BlockSegmentedScan.cu  T_DTree.cu  T_ParallelPartition.cu  T_ParallelReduction.cu  T_ParallelScan.cu  T_PiecewiseDistribution.cu  T_ProductSampler.cu  T_RandomGPU.cu  T_ReconFilter.cu  T_STree.cu  T_Texture.cu
Source/Test_TracerCUDADLL/: T_DTree.cu
Source/Tests/: CameraRayGPUTest.cu  MatrixCPUTest.cpp  MatrixGPUTest.cu  RandomGPUTest.cu  SimpleTracerSetup.h  T_AOTracers.cpp  T_BasicTracers.cpp  T_GPUScene.cpp  T_HelloTriangle.cpp  T_MatrixCPU.cpp  T_MatrixGPU.cu  T_MockTracer.cu  T_MockTracerCUDA.cu  T_PPGTracers.cpp  T_ParalelReduction.cu  T_ParallelReduction.cu  T_ParallelScan.cu  T_PathTracers.cpp  T_PiecewiseDistribution.cu  T_Quaternion.cpp  T_RandomGPU.cu  T_SceneIO.cpp  T_SceneIOCommon.cpp  T_SelfNode.cpp  T_SimpleTracers.cpp  T_Texture.cu  T_VectorCPU.cpp  T_VectorGPU.cu  TextureCPUTest.cpp  TextureTest.cu  VectorCPUTest.cpp  VectorGPUTest.cpp  VectorGPUTest.cu  main.cpp
Source/Tracer/: DirectTracer.cu  EntryPoints.h  MaterialDataStructs.h  PathTracer.h  RayTracer.hpp  SampleMaterials.cuh  SampleMaterialsKC.cuh  TracerWorks.cuh  Tracers.cpp
Source/Tracer-Test/: BasicMaterials.cu  BasicMaterials.cuh  BasicMaterialsKC.cuh  BasicTracer.cu  BasicTracer.cuh  BasicTracer.h  BasicTracerKC.cuh  BasicTracerWork.cu  BasicTracerWork.cuh  DirectTracer.cu  DirectTracer.h  EntryPoints.cpp  EntryPoints.cu  EntryPoints.h  GIMaterials.cu  GIMaterials.cuh  GIMaterialsKC.cuh  MaterialDataStructs.h  MaterialNodeReaders.cpp  MaterialNodeReaders.h  MaterialPools.cu  MaterialPools.h  MaterialStructs.h  Materials.cu  Materials.cuh  MetaTracerWork.cuh  MetaWorkPool.h  PathTracer.cu  PathTracer.cuh  PathTracer.h  RayAuxStruct.h  RayTracer.cu  RayTracer.h  SampleMaterials.cu  SampleMaterials.cuh  SampleMaterialsKC.cuh  SurfaceStructs.h  Surfaces.h  TestPools.cu  TestPools.h  (+12 more)
Source/TracerCUDA/: AOTracer.cu  AOTracer.h  AOTracerKC.cuh  AOTracerWork.cu  AOTracerWork.cuh  AcceleratorFunctions.h  AngleHashGroup.cuh  AnisoSVO.cu  AnisoSVO.cuh  AnisoSVOKC.cuh  AuxiliaryDataKernels.cuh  BVHDevice.cuh  BasicMaterials.cu  BasicMaterials.cuh  BasicMaterialsKC.cuh  BasicTracerPools.cu  BasicTracerPools.h  BinarySearch.cuh  BlockSegmentedReduce.cuh  BlockSegmentedScan.cuh  BlockTextureFilter.cuh  BoundaryMaterials.cu  BoundaryMaterials.cuh  BoundaryMaterialsKC.cuh  CameraKernels.cu  CameraKernels.cuh  ComparisonFunctions.cuh  CudaConstants.cpp  CudaConstants.h  CudaConstants.hpp  CudaSystem.cpp  CudaSystem.h  CudaSystem.hpp  DTree.cu  DTree.cuh  DTreeKC.cuh  DataStructsCommon.cuh  DebugMaterials.cu  DebugMaterials.cuh  DebugMaterialsKC.cuh  (+320 more)
Source/TracerCUDALib/: AcceleratorFunctions.h  AuxiliaryDataKernels.cuh  BitonicSort.cuh  CameraFunctions.h  CudaConstants.cpp  (+41 more)
WorkingDir/: tConf_veach_normal.json  tConf_veach_product.json  vConf_veach_normal.json  vConf_veach_product.json
(+350 files in other folders)
